fix truncate

--- a/src/client/components/Sidebar/ObjectExpertiseByType/ObjectExpertiseByType.less
+++ b/src/client/components/Sidebar/ObjectExpertiseByType/ObjectExpertiseByType.less
@@ -12,10 +12,6 @@
 
 .UserCard {
   align-items: center;
-
-  &:last-child {
-    border-bottom: @base-border !important;
-  }
 }
 
 .ObjectExpertise__dots {
