--- a/src/client/rewards/Details/Details.less
+++ b/src/client/rewards/Details/Details.less
@@ -103,6 +103,9 @@
 
 .no-visible {
   display: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   @media @small {
     display: inline-block;
